testcrate/tests/ui/methods.stderr
error: no method named `year` found for type `i32`
  --> $DIR/methods.rs:45:33
   |
45 |     sql!(Table.filter(i32_field.year() == 2015));
   |                                 ^^^^

error: no method named `test` found for type `chrono::datetime::DateTime<chrono::offset::Utc>`
  --> $DIR/methods.rs:48:28
   |
48 |     sql!(Table.filter(date.test() == 2015));
   |                            ^^^^

error: no method named `yar` found for type `chrono::datetime::DateTime<chrono::offset::Utc>`
  --> $DIR/methods.rs:51:28
   |
51 |     sql!(Table.filter(date.yar() == 2015));
   |                            ^^^
   |
   = help: did you mean year?

error: attempted access of field `dte` on type `Table`, but no field with that name was found
  --> $DIR/methods.rs:55:23
   |
55 |     sql!(Table.filter(dte.year() == 2015));
   |                       ^^^
   |
   = help: did you mean date?

error: mismatched types:
 expected `bool`,
    found `i32`
  --> $DIR/methods.rs:59:23
   |
59 |     sql!(Table.filter(date.year()));
   |                       ^^^^
   |
   = note: in this expansion of sql! (defined in tql)

error: mismatched types:
 expected `String`,
    found `integral variable`
  --> $DIR/methods.rs:65:40
   |
65 |     sql!(Table.filter(field1.ends_with(1) == true));
   |                                        ^
   |
   = note: in this expansion of sql! (defined in tql)

error: mismatched types:
 expected `i32`,
    found `String`
  --> $DIR/methods.rs:71:39
   |
71 |     sql!(Table.filter(field1.len() == "test"));
   |                                       ^^^^^^
   |
   = note: in this expansion of sql! (defined in tql)

error: mismatched types:
 expected `bool`,
    found `i32`
  --> $DIR/methods.rs:77:23
   |
77 |     sql!(Table.filter(field1.len()));
   |                       ^^^^^^
   |
   = note: in this expansion of sql! (defined in tql)

error: mismatched types:
 expected `bool`,
    found `i32`
  --> $DIR/methods.rs:83:23
   |
83 |     sql!(Table.filter(field1.len() && option_field.is_some()));
   |                       ^^^^^^
   |
   = note: in this expansion of sql! (defined in tql)

error: aborting due to 9 previous errors

